// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiPopover children is rendered 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownCenter"
  id="1"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiPopover wuiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="0"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props anchorClassName is rendered 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownCenter"
  id="3"
>
  <div
    class="wuiPopover__anchor test"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownCenter"
  id="6"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownRight"
  id="8"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="wuiPopover wuiPopover--anchorLeftCenter"
  id="7"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props arrowChildren is rendered 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="17"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          >
            <span />
          </div>
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props buffer 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="18"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props display block is rendered 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownCenter wuiPopover--displayBlock"
  id="2"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props isOpen defaults to false 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownCenter"
  id="9"
>
  <div
    class="wuiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`WuiPopover props isOpen renders true 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="10"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props offset with arrow 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="15"
    offset="10"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 26px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props offset without arrow 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="16"
    offset="10"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen wuiPopover__panel-noArrow"
          role="dialog"
          style="top: 18px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props ownFocus defaults to false 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="11"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props ownFocus renders true 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="12"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          aria-describedby="htmlId"
          aria-live="off"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          data-autofocus="true"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
          tabindex="0"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <p
            class="wuiScreenReaderOnly"
            id="htmlId"
          >
            You are in a dialog. To close this dialog, hit escape.
          </p>
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props panelClassName is rendered 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="13"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingMedium wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen test"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`WuiPopover props panelPaddingSize is rendered 1`] = `
<div>
  <div
    class="wuiPopover wuiPopover--anchorDownCenter wuiPopover-isOpen"
    id="14"
  >
    <div
      class="wuiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-live="assertive"
          aria-modal="true"
          class="wuiPanel wuiPanel--paddingSmall wuiPopover__panel wuiPopover__panel--bottom wuiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="wuiPopover__panelArrow wuiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
